# data-formulator

./: README-zh.md  README.md  package.oo.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: auto-publish.yaml  layer.yml
data_formulator/: app.py
data_formulator/agents/: agent_data_load.py  agent_data_transform_v2.py  agent_utils.py  client_utils.py
flows/process-xlsx-data-and-display-chart/: .flow.ui.oo.json  flow.oo.yaml
flows/process-xlsx-data-and-display-chart/scriptlets/: +python#1.py  +python#2.py  +python#3.py
flows/test/: .flow.ui.oo.json  flow.oo.yaml
flows/test-derive-data/: .flow.ui.oo.json  flow.oo.yaml
flows/test-summarize/: .flow.ui.oo.json  flow.oo.yaml
flows/test/scriptlets/: +scriptlet#1.py
oo-locales/: en.json  zh-CN.json
subflows/ai-data-analysis/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/ai-data-analysis/scriptlets/: +scriptlet#1.py  debug.json
tasks/chart_preivew/: __init__.py  task.oo.yaml
tasks/code_preview/: __init__.py  task.oo.yaml
tasks/derive-data/: __init__.py  task.oo.yaml
tasks/read_files/: __init__.py  task.oo.yaml
tasks/result_chart/: __init__.py  task.oo.yaml
tasks/summarize-data/: __init__.py  task.oo.yaml
